chore: fix compilation error
Signed-off-by: Naydenov <nikola.naydenov@limechain.tech>